# flake8-return

./: .bumpversion.cfg  .flake8  .travis.yml  Makefile  README.md  makefile  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: lint_python.yml
flake8_return/: __init__.py  errors.py  plugin.py  stack_keys.py  utils.py  visitors.py
flake8_return/mixins/: implicit_return.py  implicit_return_value.py  superfluous_return.py  unnecessary_assign.py  unnecessary_return_none.py
tests/: __init__.py  test_coroutine.py  test_flake8_return.py  test_implicit_return.py  test_implicit_return_value.py  test_superfluous_elif_break.py  test_superfluous_elif_continue.py  test_superfluous_elif_raise.py  test_superfluous_elif_return.py  test_superfluous_else_break.py  test_superfluous_else_continue.py  test_superfluous_else_raise.py  test_superfluous_else_return.py  test_unnecessary_assign.py  test_unnecessary_return_none.py
