[tool.poetry]
name = "flake8-return"
version = "1.1.2"
description = "Flake8 plugin that checks return values"
authors = ["Afonasev Evgeniy <ea.afonasev@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/afonasev/flake8-return"
homepage = "https://pypi.org/project/flake8-return"
keywords = ['flake8', 'plugin', 'return']

[tool.poetry.plugins."flake8.extension"]
R50 = 'flake8_return.plugin:ReturnPlugin'

[tool.poetry.dependencies]
python = "^3.6"
flake8-plugin-utils = "^1.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0",allow-prereleases = true}
bumpversion = "^0.6.0"
flake8-awesome = "^1.3"
mypy = "^0.782"
pylint = "^2.6"
pytest = "^6.1"
pytest-cov = "^2.10"
pytest-deadfixtures = "^2.2"
pytest-mock = "^3.3"
unify = "^0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
